--- a/markers_maker.html
+++ b/markers_maker.html
@@ -195,7 +195,7 @@ body{background:var(--mm-bg);color:var(--mm-text)}
         <button class="btn-pos1" onclick="assignTop('acceptable')"><span class="blbl">+1</span><span class="bsub">приемлемы</span></button>
         <button class="btn-neg2" onclick="assignTop('strong_negative')"><span class="blbl">−2</span><span class="bsub">очень нежелательны</span></button>
         <button class="btn-pos2" onclick="assignTop('excellent')"><span class="blbl">+2</span><span class="bsub">отличные</span></button>
-        <button class="btn-ign" onclick="assignTop('ignore')"><span class="blbl">игнорировать</span></button>
+        <button class="btn-ign" onclick="assignTop('ignore')"><span class="blbl">игнор</span></button>
         <button class="btn-nc" onclick="assignTop('notcount')"><span class="blbl">не учитывать</span></button>
       </div>
 
@@ -850,3 +850,4 @@ render();
 </script>
 </body>
 </html>
+
